# fm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/terminal/serialport/terminal/: settingsdialog.cpp  settingsdialog.ui
src/test_idea/NuttXOnTeensy/: build-docker  docker-compose.yml  flash-nuttx-to-teensy  run-nuttx-container-with-usb-access
src/test_idea/NuttXOnTeensy/docker-files/: NuttX-Dockerfile
src/test_idea/teensy40Zephyr/: platformio.ini
src/test_idea/teensy40Zephyr/.platformio/: pyvenv.cfg
src/test_idea/teensy40Zephyr/.platformio/Scripts/: activate  activate.bat
src/test_idea/teensy40Zephyr/src/: main.c
src/test_idea/teensy40Zephyr/zephyr/: CMakeLists.txt
src/test_idea/teensyZephyrPlatformioClion/: platformio.ini  prj.conf
src/test_idea/teensyZephyrPlatformioClion/boards/: teensy40.overlay
src/test_idea/teensyZephyrPlatformioClion/src/: main.c
src/test_idea/teensyZephyrPlatformioClion/zephyr/: CMakeLists.txt
src/test_idea/toolchaintest/: CMakeLists.txt  main.cpp
src/test_idea/zephyr-blink/: README.md  platformio.ini
src/test_idea/zephyr-blink/src/: main.c  uart.c  uart6.c
src/test_idea/zephyr-blink/zephyr/: CMakeLists.txt  prj.conf
src/test_idea/zephyr-blink/zephyr/boards/arm/teensy4/: CMakeLists.txt  ____teensy40.overlay____
src/zephyr_based_project/: Readme.md
src/zephyr_based_project/simple_drone/: CMakeLists.txt  prj.conf
src/zephyr_based_project/simple_drone/boards/: teensy40.overlay  teensy40_defconfig
src/zephyr_based_project/simple_drone/src/: led.c  main.c  uart.c  uart4.c
